# Senior-Design-2017-Backend

./: .gitignore
pcl/pcd_write_examples/: CMakeLists.txt
pcl/rotate_and_concat/: .greedy_projection.cpp.swp  CMakeLists.txt  pcd_gen.h
web_server/: CMakeLists.txt  http_examples.cpp
web_server/greedy_projection/: CMakeLists.txt  concatenate_clouds.cpp  greedy_projection.cpp  greedy_projection.cpp.bak  greedy_projection.h  greedy_projection_improved.cpp  greedy_projection_lib.cpp  greedy_projection_lib.h  pcd_gen.cpp
web_server/greedy_projection/tmp/: greedy_projection-cfgcmd.txt
web_server/pcl/pcd_write_examples/: pcd_write.cpp
web_server/pcl/rotate_and_concat/: CMakeLists.txt  concatenate_clouds.cpp  greedy_projection_lib.h
web_server/pcl/rotate_and_concat/tmp/: project_greedy_projection-cfgcmd.txt
